--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <head>
         <title> Charle's Cooking School - Index </title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
         <header>
@@ -34,9 +35,9 @@
             </div>
         </main>
         <footer>
-            <small><i>
+            <p>
                 Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
-            </i></small>
+            </p>
         </footer>
     </body> 
 
