--- a/classes.html
+++ b/classes.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
     <head>
         <title> Charle's Cooking School - Courses </title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
-        <header>
-            <h1> Charle's Cooking Classes </h1>
-        </header> 
-        <nav>
-            <a href="index.html">Index</a>
-            <a href="classes.html">Courses</a>
-        </nav>
-        <main>
-            <div>
-                <h3> Available Courses for Winter 2023 </h3>
-            </div>
-            <div>
-                <dt>Desserts 461</dt>
-                    <dd>
-                        This course is designed to test the capabilities of a Pastry chef and will encompass learning how to make the Lemon Meringue Pie, Macarons 
-                        and an introduction into the world of realistic cake making. Students will be expected to perform multiple presentations throughout the year where they will be judged by
-                        a panel of 5 judges. Prerequisites include Desserts 295 at a B- Grade, and Desserts 350 at a B- Grade or Pastry 400 at a B- Grade.
-                     </dd>
-                <dt>Meal Prepping 260</dt>
-                    <dd>
-                        This course is designed to instruct students on more intermediate methods of meal prepping including how to properly remove air from a plastic 
-                        bag before putting it in the freezer, and preparing a meal plan over the course of two weeks. This course is designed to be taken in conjunction 
-                        with Meals 330. Prerequisites include Meal Prepping 101 at a C- Grade, and Meal Prepping 111 at a C- Grade.
-                    </dd>
-                <dt>Meals 330</dt>
-                    <dd>
-                        This course is designed with the intent of reinforcing concepts learned in previous courses on how to perfect foods such as a Steak 
-                        and potatoes. This course is designed to be taken in conjunction with Meal Prepping 260 as student's will use the meals they have made
-                        during the class to then successfully prepare them for later consumption. Prerequisites include Meals 220 and Meals 252 at a C- Grade,
-                        and Desserts 221 or Barbeque 151 at a C- Grade.
-                    </dd>
-            </div>
-            <div>
-                <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
-            </div>
-        </main>
-        <footer>
-            <small><i>
-                Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
-            </i></small>
-        </footer>
+        <div id="wrapper">
+            <header>
+                <h1> Charle's Cooking Classes </h1>
+            </header> 
+            <nav>
+                <a href="index.html">Index</a>
+                <a href="classes.html">Courses</a>
+                <a href="schedule.html">Schedule</a>
+            </nav>
+            <main>
+                <div>
+                    <img src="kitchen.jpg" alt="KitchenClassroom" width="950" height="400">
+                </div>
+                <div>
+                    <h2> Available Courses for Winter 2023 </h2>
+                </div>
+                <div>
+                    <dt>Desserts 461</dt>
+                        <dd>
+                            This course is designed to test the capabilities of a Pastry chef and will encompass learning how to make the Lemon Meringue Pie, Macarons 
+                            and an introduction into the world of realistic cake making. Students will be expected to perform multiple presentations throughout the year where they will be judged by
+                            a panel of 5 judges. Prerequisites include Desserts 295 at a B- Grade, and Desserts 350 at a B- Grade or Pastry 400 at a B- Grade.
+                        </dd>
+                    <dt>Meal Prepping 260</dt>
+                        <dd>
+                            This course is designed to instruct students on more intermediate methods of meal prepping including how to properly remove air from a plastic 
+                            bag before putting it in the freezer, and preparing a meal plan over the course of two weeks. This course is designed to be taken in conjunction 
+                            with Meals 330. Prerequisites include Meal Prepping 101 at a C- Grade, and Meal Prepping 111 at a C- Grade.
+                        </dd>
+                    <dt>Meals 330</dt>
+                        <dd>
+                            This course is designed with the intent of reinforcing concepts learned in previous courses on how to perfect foods such as a Steak 
+                            and potatoes. This course is designed to be taken in conjunction with Meal Prepping 260 as student's will use the meals they have made
+                            during the class to then successfully prepare them for later consumption. Prerequisites include Meals 220 and Meals 252 at a C- Grade,
+                            and Desserts 221 or Barbeque 151 at a C- Grade.
+                        </dd>
+                </div>
+                <div>
+                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
+                </div>
+            </main>
+            <footer>
+                <p>
+                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>Made by Guillaume Comfort :)
+                </p>
+            </footer>
+        </div>
     </body> 
 
 </html>
