--- a/schedule.html
+++ b/schedule.html
@@ -56,7 +56,7 @@
             </main>
             <footer>
                 <p>
-                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>Made by Guillaume Comfort :)
+                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
                 </p>
             </footer>
         </div>
