--- a/classes.html
+++ b/classes.html
@@ -12,9 +12,11 @@
                 <h1> Charle's Cooking Classes </h1>
             </header> 
             <nav>
-                <a href="index.html">Index</a>
-                <a href="classes.html">Courses</a>
-                <a href="schedule.html">Schedule</a>
+                <ul>
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="classes.html">Courses</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
+                </ul>
             </nav>
             <main>
                 <div>
