--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <title> Charle's Cooking School - Index </title>
         <meta charset="utf-8">
@@ -11,13 +12,15 @@
                 <h1> Charle's Cooking School </h1>
             </header> 
             <nav>
-                <a href="index.html">Index</a>
-                <a href="classes.html">Courses</a>
-                <a href="schedule.html">Schedule</a>
+                <ul>
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="classes.html">Courses</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
+                </ul>
             </nav>
             <main>
                 <div>
-                    <img src="studyingforthebigtest.jpg" alt="ReadingKitchen" width="175" height="250" align="right">
+                    <img id="floatleft" src="studyingforthebigtest.jpg" alt="ReadingKitchen" width="175" height="250">
                 </div>
                 <div>
                     <h2> Do you think you have what it take's to learn how to cook?</h2>
@@ -33,7 +36,7 @@
                         <li>Job opportunities awaiting the most prodigious students upon graduation.</li>
                     </ul>
                 </div>
-                <div>
+                <div id="clear">
                     <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
                 </div>
             </main>
