--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
+    
     <head>
         <title> Charle's Cooking School - Schedule </title>
         <meta charset="utf-8">
@@ -13,9 +12,11 @@
                 <h1> Charle's Cooking Schedule </h1>
             </header> 
             <nav>
-                <a href="index.html">Index</a>
-                <a href="classes.html">Courses</a>
-                <a href="schedule.html">Schedule</a>
+                <ul>
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="classes.html">Courses</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
+                </ul>
             </nav>
             <main>
                 <div>
