--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
+<!-- Guillaume Comfort, IT202AL, Project 5-->
+<!-- Schedule page for a Charle's Cooking School featuring some information, a bulletin, and contact information, Complete with CSS and Images and buttons -->
+
     <head>
         <title> Charle's Cooking School - Schedule </title>
         <meta charset="utf-8">
@@ -16,6 +19,7 @@
                     <li><a href="index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <main>
@@ -26,30 +30,82 @@
                     <h2> Charle's Schedule </h2>
                 </div>
                 <div>
-                    <h4>Monday, Wednesday, and Friday</h4>
-                </div>
-                <div>
-                    <ul>
-                        <li>9:00 - 12:00 Desserts 461A</li>
-                        <li>13:00 - 18:00 Meals 330A</li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Tuesday, Thursday</h4>
-                </div>
-                <div>
-                    <ul>
-                        <li>10:00 - 16:00 Meal prepping 260A</li>
-                        <li>16:30 - 20:00 Desserts 461AL</li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Saturday, Sunday</h4> 
-                </div>
-                <div>
-                    <ul>
-                        <li>No Classes</li>
-                    </ul>
+                    <table>
+                        <div>
+                            <caption>
+                                Monday, Wednesday, and Friday
+                            </caption>
+                        </div>
+                        <div>
+                            <tr>
+                                <th>Time</th>
+                                <th>Class</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    9:00 - 12:00 
+                                </td>
+                                <td>
+                                    Desserts 461A
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    13:00 - 18:00
+                                </td>
+                                <td>
+                                    Meals 330A
+                                </td>
+                            </tr>
+                        </div>
+                    </table>
+                    <table>
+                        <div>
+                            <caption>
+                                Tuesday, Thursday
+                            </caption>
+                        </div>
+                        <div>
+                            <tr>
+                                <th>Time</th>
+                                <th>Class</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    10:00 - 16:00 
+                                </td>
+                                <td>
+                                    Meal prepping 260A
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    16:30 - 20:00
+                                </td>
+                                <td>
+                                    Desserts 461AL
+                                </td>
+                        </div>
+                    <table>
+                        <div>
+                            <caption>Saturday, Sunday</caption> 
+                        </div>
+                        <div>
+                            <tr>
+                                <th>Time</th>
+                                <th>Class</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    No Classes
+                                </td>
+                                <td>
+                                    There are no classes on these days.
+                                </td>
+                            </tr>
+                            </tr>
+                        </div>
+                    </table>
                 </div>
                 <div>
                     <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
@@ -57,7 +113,7 @@
             </main>
             <footer>
                 <p>
-                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
+                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>Made by Guillaume Comfort :)
                 </p>
             </footer>
         </div>
