--- a/classes.html
+++ b/classes.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Guillaume Comfort, IT202AL, Project 5-->
+<!-- Courses page for Charle's Cooking School featuring 3 available courses and contact information, Complete with CSS and Images and buttons-->
+
     <head>
         <title> Charle's Cooking School - Courses </title>
         <meta charset="utf-8">
@@ -16,6 +19,7 @@
                     <li><a href="index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <main>
@@ -52,7 +56,7 @@
             </main>
             <footer>
                 <p>
-                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
+                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>Made by Guillaume Comfort :)
                 </p>
             </footer>
         </div>
