--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Guillaume Comfort, IT202AL, Project 5-->
+<!-- Index page for a Charle's Cooking School featuring some information, a bulletin, and contact information, Complete with CSS and Images and buttons -->
+
     <head>
         <title> Charle's Cooking School - Index </title>
         <meta charset="utf-8">
@@ -16,6 +19,7 @@
                     <li><a href="index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <main>
@@ -42,7 +46,7 @@
             </main>
             <footer>
                 <p>
-                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
+                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>Made by Guillaume Comfort :)
                 </p>
             </footer>
         </div>
