--- a/schedule.html
+++ b/schedule.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Guillaume Comfort, IT202AL, Project 5-->
-<!-- Schedule page for a Charle's Cooking School featuring some information, a bulletin, and contact information, Complete with CSS and Images and buttons -->
-
     <head>
         <title> Charle's Cooking School - Schedule </title>
         <meta charset="utf-8">
@@ -113,7 +109,7 @@
             </main>
             <footer>
                 <p>
-                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>Made by Guillaume Comfort :)
+                    Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
                 </p>
             </footer>
         </div>
