New html and css changes.

--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Index page for a Charle's Cooking School featuring some information, a bulletin, and contact information, Complete with CSS and Images and buttons -->
+
     <head>
         <title> Charle's Cooking School - Index </title>
-        <meta charset="utf-8">
+        <meta charset="utf-8">        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
@@ -12,7 +16,7 @@
             </header> 
             <nav>
                 <ul>
-                    <li><a href="index.html">Index</a></li>
+                    <li><a href="Index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -20,7 +24,7 @@
             </nav>
             <main>
                 <div>
-                    <img id="floatleft" src="studyingforthebigtest.jpg" alt="ReadingKitchen" width="175" height="250">
+                    <img id="floatleft" src="studyingforthebigtest.jpg" alt="ReadingKitchen">
                 </div>
                 <div>
                     <h2> Do you think you have what it take's to learn how to cook?</h2>
@@ -37,7 +41,7 @@
                     </ul>
                 </div>
                 <div id="clear">
-                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
+                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1<br><span id="Desktop">+1-800-347-6005</span><br><a href="tel:" id="Mobile">+1-800-347-6005</a></p>  
                 </div>
             </main>
             <footer>
