--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+<!-- Schedule page for a Charle's Cooking School featuring some information, a bulletin, and contact information, Complete with CSS and Images and buttons -->
+
     <head>
         <title> Charle's Cooking School - Contact </title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
@@ -12,7 +17,7 @@
             </header>
             <nav>
                 <ul>
-                    <li><a href="index.html">Index</a></li>
+                    <li><a href="Index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -35,12 +40,13 @@
                     </form>
                 </div>
                 <div id="clear">
-                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
+                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1<br><span id="Desktop">+1-800-347-6005</span><br><a href="tel:" id="Mobile">+1-800-347-6005</a></p>  
                 </div>
             </main>
             <footer>
                 <p>
                     Copyright &copy; 2023 Charle's Cooking Inc.<br> <a href="mailto:charlesthemanhimself@totallylegitimateemailservice.com">charlesthemanhimself@totallylegitimateemailservice.com</a><br>
+                </p>
             </footer>
         </div>
     </body>
