--- a/classes.html
+++ b/classes.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+<!-- Courses page for Charle's Cooking School featuring 3 available courses and contact information, Complete with CSS and Images and buttons-->
+
     <head>
         <title> Charle's Cooking School - Courses </title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
@@ -13,7 +17,7 @@
             </header> 
             <nav>
                 <ul>
-                    <li><a href="index.html">Index</a></li>
+                    <li><a href="Index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -21,7 +25,7 @@
             </nav>
             <main>
                 <div>
-                    <img src="kitchen.jpg" alt="KitchenClassroom" width="950" height="400">
+                    <img src="kitchen.jpg" alt="KitchenClassroom">
                 </div>
                 <div>
                     <h2> Available Courses for Winter 2023 </h2>
@@ -47,8 +51,8 @@
                             and Desserts 221 or Barbeque 151 at a C- Grade.
                         </dd>
                 </div>
-                <div>
-                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
+                <div id="clear">
+                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1<br><span id="Desktop">+1-800-347-6005</span><br><a href="tel:" id="Mobile">+1-800-347-6005</a></p>  
                 </div>
             </main>
             <footer>
