--- a/schedule.html
+++ b/schedule.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+<!-- Schedule page for a Charle's Cooking School featuring some information, a bulletin, and contact information, Complete with CSS and Images and buttons -->
+
     <head>
         <title> Charle's Cooking School - Schedule </title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
@@ -12,7 +17,7 @@
             </header> 
             <nav>
                 <ul>
-                    <li><a href="index.html">Index</a></li>
+                    <li><a href="Index.html">Index</a></li>
                     <li><a href="classes.html">Courses</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -20,7 +25,7 @@
             </nav>
             <main>
                 <div>
-                    <img src="itscookingtime.jpg" alt="ChefinKitchen" width="700" height="350">
+                    <img src="itscookingtime.jpg" alt="ChefinKitchen">
                 </div>
                 <div>
                     <h2> Charle's Schedule </h2>
@@ -103,8 +108,8 @@
                         </div>
                     </table>
                 </div>
-                <div>
-                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1</p>   
+                <div id="clear">
+                    <p>Charle's Cooking School<br>126 Food Blvd<br>Foodville, AB, E4T 1T1<br><span id="Desktop">+1-800-347-6005</span><br><a href="tel:" id="Mobile">+1-800-347-6005</a></p>  
                 </div>
             </main>
             <footer>
